<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.0.5</version>
    <relativePath/> <!-- lookup parent from repository -->
  </parent>

  <groupId>it.luzzetti.justdrink</groupId>
  <artifactId>backoffice</artifactId>
  <version>${revision}</version>

  <name>:: backoffice ::</name>

  <modules>
    <module>backoffice-domain</module>
    <module>backoffice-application</module>
    <module>backoffice-infrastructure</module>
    <module>backoffice-bootloader</module>
  </modules>

  <packaging>pom</packaging>

  <developers>
    <developer>
      <name>Christian Luzzetti</name>
      <email>christian.luzzetti@gmail.com</email>
    </developer>
  </developers>

  <!-- il Docker image name è strettamente correlato al nome del repository DockerHub su cui pushare -->

  <properties>
    <revision>0.0.2-SNAPSHOT</revision>
    <start-class>it.luzzetti.justdrink.backoffice.AppLauncher</start-class>
    <docker.image.name>docker.io/luzzetti/${project.artifactId}:latest</docker.image.name>
    <dockerhub.username/>
    <dockerhub.token/>
    <java.version>17</java.version>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>
    <maven-clean-plugin.version>3.2.0</maven-clean-plugin.version>
    <maven-flatten-plugin.version>1.3.0</maven-flatten-plugin.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <mapstruct.version>1.5.3.Final</mapstruct.version>
    <springdoc-openapi.version>2.0.2</springdoc-openapi.version>
    <querydsl.version>5.0.0</querydsl.version>
  </properties>

  <!-- BOM -->
  <dependencyManagement>
    <dependencies>
      <!-- OTHERS -->
      <dependency>
        <groupId>org.mapstruct</groupId>
        <artifactId>mapstruct</artifactId>
        <version>${mapstruct.version}</version>
      </dependency>
      <dependency>
        <groupId>org.springdoc</groupId>
        <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
        <version>${springdoc-openapi.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <!--    GLOBAL DEPENDENCIES-->
  <dependencies>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-devtools</artifactId>
      <scope>runtime</scope>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
    </dependency>
    <dependency>
      <groupId>org.mapstruct</groupId>
      <artifactId>mapstruct</artifactId>
    </dependency>
    <dependency>
      <groupId>jakarta.persistence</groupId>
      <artifactId>jakarta.persistence-api</artifactId>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <!-- Pulisce sempre. Anche se ci dimentichiamo di scriverlo -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-clean-plugin</artifactId>
        <version>${maven-clean-plugin.version}</version>
        <executions>
          <execution>
            <id>auto-clean</id>
            <phase>initialize</phase>
            <goals>
              <goal>clean</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>flatten-maven-plugin</artifactId>
        <version>${maven-flatten-plugin.version}</version>
        <configuration>
          <flattenMode>bom</flattenMode>
        </configuration>
        <executions>
          <!-- enable flattening -->
          <execution>
            <id>flatten</id>
            <phase>process-resources</phase>
            <goals>
              <goal>flatten</goal>
            </goals>
          </execution>
          <!-- ensure proper cleanup -->
          <execution>
            <id>flatten.clean</id>
            <phase>clean</phase>
            <goals>
              <goal>clean</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <!--            MAPSTRUCT -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <annotationProcessorPaths>
            <path>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
              <version>${lombok.version}</version>
            </path>
            <path>
              <groupId>org.mapstruct</groupId>
              <artifactId>mapstruct-processor</artifactId>
              <version>${mapstruct.version}</version>
            </path>
            <path>
              <groupId>com.querydsl</groupId>
              <artifactId>querydsl-apt</artifactId>
              <classifier>jakarta</classifier>
              <version>${querydsl.version}</version>
            </path>
            <path>
              <groupId>jakarta.persistence</groupId>
              <artifactId>jakarta.persistence-api</artifactId>
              <version>${jakarta-persistence.version}</version>
            </path>
            <!-- other annotation processors -->
          </annotationProcessorPaths>
          <compilerArgs>
            <arg>-Amapstruct.defaultComponentModel=spring</arg>
          </compilerArgs>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
